TLAPlus/sample/transfer.toolbox/Model_1_SnapShot_1518355339217/MC.out
@!@!@STARTMSG 2262:0 @!@!@
TLC2 Version 2.12 of 29 January 2018
@!@!@ENDMSG 2262 @!@!@
@!@!@STARTMSG 2187:0 @!@!@
Running breadth-first search Model-Checking with 2 workers on 4 cores with 2664MB heap and 5323MB offheap memory (Linux 4.14.16-300.fc27.x86_64 amd64, Oracle Corporation 9.0.1 x86_64).
@!@!@ENDMSG 2187 @!@!@
@!@!@STARTMSG 2220:0 @!@!@
Starting SANY...
@!@!@ENDMSG 2220 @!@!@
Parsing file /home/amey/workspace/TLAPlus/sample/transfer.toolbox/Model_1/MC.tla
Parsing file /home/amey/workspace/TLAPlus/sample/transfer.toolbox/Model_1/transfer.tla
Parsing file /home/amey/Applications/toolbox/plugins/org.lamport.tlatools_1.0.0.201801291236/tla2sany/StandardModules/TLC.tla
Parsing file /home/amey/Applications/toolbox/plugins/org.lamport.tlatools_1.0.0.201801291236/tla2sany/StandardModules/Naturals.tla
Parsing file /home/amey/Applications/toolbox/plugins/org.lamport.tlatools_1.0.0.201801291236/tla2sany/StandardModules/Sequences.tla
Semantic processing of module Naturals
Semantic processing of module Sequences
Semantic processing of module TLC
Semantic processing of module transfer
Semantic processing of module MC
@!@!@STARTMSG 2219:0 @!@!@
SANY finished.
@!@!@ENDMSG 2219 @!@!@
@!@!@STARTMSG 2185:0 @!@!@
Starting... (2018-02-11 18:52:17)
@!@!@ENDMSG 2185 @!@!@
@!@!@STARTMSG 2189:0 @!@!@
Computing initial states...
@!@!@ENDMSG 2189 @!@!@
@!@!@STARTMSG 2190:0 @!@!@
Finished computing initial states: 20 distinct states generated.
@!@!@ENDMSG 2190 @!@!@
@!@!@STARTMSG 1000:1 @!@!@
TLC threw an unexpected exception.
This was probably caused by an error in the spec or model.
See the User Output or TLC Console for clues to what happened.
The exception was a tlc2.tool.EvalException
: @!@!@STARTMSG 2154:0 @!@!@
Attempted to apply the operator overridden by the Java method
public static tlc2.value.Value tlc2.module.TLC.Assert(tlc2.value.Value,tlc2.value.Value),
but it produced the following error:
@!@!@STARTMSG 2132:0 @!@!@
The first argument of Assert evaluated to FALSE; the second argument was:
"Failure of assertion at line 10, column 4."
@!@!@ENDMSG 2132 @!@!@
@!@!@ENDMSG 2154 @!@!@
@!@!@ENDMSG 1000 @!@!@
@!@!@STARTMSG 2121:1 @!@!@
The behavior up to this point is:
@!@!@ENDMSG 2121 @!@!@
@!@!@STARTMSG 2217:4 @!@!@
1: <Initial predicate>
/\ bob_account = 10
/\ money = 11
/\ alice_account = 10
/\ pc = "A"

@!@!@ENDMSG 2217 @!@!@
@!@!@STARTMSG 2217:4 @!@!@
2: <A line 23, col 6 to line 26, col 42 of module transfer>
/\ bob_account = 10
/\ money = 11
/\ alice_account = -1
/\ pc = "B"

@!@!@ENDMSG 2217 @!@!@
@!@!@STARTMSG 2217:4 @!@!@
3: <B line 28, col 6 to line 31, col 44 of module transfer>
/\ bob_account = 21
/\ money = 11
/\ alice_account = -1
/\ pc = "C"

@!@!@ENDMSG 2217 @!@!@
@!@!@STARTMSG 2103:1 @!@!@
The error occurred when TLC was evaluating the nested
expressions at the following positions:
0. Line 33, column 6 to line 37, column 57 in transfer
1. Line 33, column 9 to line 33, column 16 in transfer
2. Line 34, column 9 to line 35, column 60 in transfer


@!@!@ENDMSG 2103 @!@!@
@!@!@STARTMSG 2201:0 @!@!@
The coverage statistics at 2018-02-11 18:52:18
@!@!@ENDMSG 2201 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 15, col 12 to line 15, col 24 of module transfer: 0
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 15, col 27 to line 15, col 37 of module transfer: 0
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 15, col 40 to line 15, col 44 of module transfer: 0
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 15, col 47 to line 15, col 48 of module transfer: 0
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 24, col 9 to line 24, col 46 of module transfer: 20
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 25, col 9 to line 25, col 17 of module transfer: 20
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 26, col 22 to line 26, col 32 of module transfer: 20
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 26, col 35 to line 26, col 39 of module transfer: 20
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 29, col 9 to line 29, col 42 of module transfer: 20
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 30, col 9 to line 30, col 17 of module transfer: 20
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 31, col 22 to line 31, col 34 of module transfer: 20
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 31, col 37 to line 31, col 41 of module transfer: 20
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 36, col 9 to line 36, col 20 of module transfer: 9
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 37, col 22 to line 37, col 34 of module transfer: 9
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 37, col 37 to line 37, col 47 of module transfer: 9
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2221:0 @!@!@
  line 37, col 50 to line 37, col 54 of module transfer: 9
@!@!@ENDMSG 2221 @!@!@
@!@!@STARTMSG 2202:0 @!@!@
End of statistics.
@!@!@ENDMSG 2202 @!@!@
@!@!@STARTMSG 2200:0 @!@!@
Progress(4) at 2018-02-11 18:52:18: 69 states generated (5,149 s/min), 69 distinct states found (5,149 ds/min), 18 states left on queue.
@!@!@ENDMSG 2200 @!@!@
@!@!@STARTMSG 2199:0 @!@!@
69 states generated, 69 distinct states found, 18 states left on queue.
@!@!@ENDMSG 2199 @!@!@
@!@!@STARTMSG 2194:0 @!@!@
The depth of the complete state graph search is 4.
@!@!@ENDMSG 2194 @!@!@
@!@!@STARTMSG 2268:0 @!@!@
The average outdegree of the complete state graph is 1 (minimum is 1, the maximum 1 and the 95th percentile is 1).
@!@!@ENDMSG 2268 @!@!@
@!@!@STARTMSG 2186:0 @!@!@
Finished in 948ms at (2018-02-11 18:52:18)
@!@!@ENDMSG 2186 @!@!@
