TLAPlus/sample/transfer.toolbox/Model_1_SnapShot_1518355339217/MC.tla
---- MODULE MC ----
EXTENDS transfer, TLC

\* SPECIFICATION definition @modelBehaviorSpec:0
spec_15183553371252000 ==
Spec
----
=============================================================================
\* Modification History
\* Created Sun Feb 11 18:52:17 IST 2018 by amey
